# Second-Best--Solver

./: Cargo.toml  README.md  benchmark_results.md
.cargo/: config.toml
benches/: search_speed.rs
benchmarks/: bench_0-40_2-5  bench_0-40_4-7  bench_0_4-8  bench_16-40_6-10
cli/: Cargo.toml
cli/src/: bench.rs  cli.rs  main.rs
engine/: Cargo.toml
engine/benches/: search_speed.rs
engine/src/: eval.rs  lib.rs  movegen.rs  position.rs  solver.rs  transposition_table.rs
gui/: Cargo.toml
gui/src/: main.rs
src/: bench.rs  cli.rs  eval.rs  lib.rs  main.rs  movegen.rs  position.rs  solver.rs  transposition_table.rs
