[package]
name = "second-best"
version = "0.1.0"
edition = "2021"
authors = ["Wannes Malfait"]
description = "A solver for the board game: Second Best!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.10", features = ["derive"] }
