[package]
name = "second-best"
version = "0.1.0"
edition = "2021"
authors = ["Wannes Malfait"]
description = "A solver for the board game: Second Best!"
default-run = "second-best"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_egui = { version = "0.24", optional = true }
bevy = { version = "0.12", optional = true }
clap = { version = "4.4", features = ["derive"] }
bevy_mod_picking = { version = "0.17.0", features = ["backend_egui"] }
bevy_panorbit_camera = { version = "0.10.0", features = ["bevy_egui"] }

[features]
gui = ["bevy_egui", "bevy"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "search_speed"
harness = false

[[bin]]
name = "gui"
required-features = ["gui"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
